--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
       <audio id="audio">
         <source src="sound.mp3" type="audio/mpeg">
-      
       </audio> 
     <!-- <audio src="sound.mp3" autostart="true" controls></audio>  -->
     <div id="container">
@@ -38,7 +37,7 @@
         </div>
         <div class="select-option batu">
           
-          <img src="batu.png">  
+          <img src="batu.PNG">  
           <p>batu</p>
 
         </div>
