--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="select-option batu">
           
-          <img src="batu.PNG">  
+          <img src="batu.png">  
           <p>batu</p>
 
         </div>
